{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 215,
  "lineage": "c571ccb7-d763-eb91-d3bf-40c5ecfa01b1",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "search_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:loadbalancer/app/arxplorer-jjb08-alb/6b4500eb1f353bbc",
            "arn_suffix": "app/arxplorer-jjb08-alb/6b4500eb1f353bbc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "arxplorer-jjb08-alb-1555110939.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:loadbalancer/app/arxplorer-jjb08-alb/6b4500eb1f353bbc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "arxplorer-jjb08-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f7cc361f9e6d73db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057eb45c5af14a58b"
              },
              {
                "subnet_id": "subnet-0c46445e0e734381d"
              }
            ],
            "subnets": [
              "subnet-057eb45c5af14a58b",
              "subnet-0c46445e0e734381d"
            ],
            "tags": {
              "Name": "arxplorer-jjb08-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-alb",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "search_api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:listener/app/arxplorer-jjb08-alb/6b4500eb1f353bbc/ff702e6758251fba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:targetgroup/arxplorer-jjb08-search-api-tg/56b6c75ad9560090",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:listener/app/arxplorer-jjb08-alb/6b4500eb1f353bbc/ff702e6758251fba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:loadbalancer/app/arxplorer-jjb08-alb/6b4500eb1f353bbc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "ArXplorer"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_lb.search_api",
            "module.app.aws_lb_target_group.search_api",
            "module.app.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "search_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:targetgroup/arxplorer-jjb08-search-api-tg/56b6c75ad9560090",
            "arn_suffix": "targetgroup/arxplorer-jjb08-search-api-tg/56b6c75ad9560090",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:472730591037:targetgroup/arxplorer-jjb08-search-api-tg/56b6c75ad9560090",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:472730591037:loadbalancer/app/arxplorer-jjb08-alb/6b4500eb1f353bbc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "arxplorer-jjb08-search-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "arxplorer-jjb08-search-api-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-search-api-tg",
              "Project": "ArXplorer"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:security-group/sg-0f7cc361f9e6d73db",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7cc361f9e6d73db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "arxplorer-jjb08-alb-sg",
            "name_prefix": "",
            "owner_id": "472730591037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arxplorer-jjb08-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-alb-sg",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "offline_ingest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:security-group/sg-02b825ae044d1b307",
            "description": "Security group for offline ingestion / batch workers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b825ae044d1b307",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "arxplorer-jjb08-offline-sg",
            "name_prefix": "",
            "owner_id": "472730591037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arxplorer-jjb08-offline-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-offline-sg",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "search_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:security-group/sg-069eb32b06cb09995",
            "description": "Security group for Search API instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069eb32b06cb09995",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f7cc361f9e6d73db"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "arxplorer-jjb08-search-api-sg",
            "name_prefix": "",
            "owner_id": "472730591037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arxplorer-jjb08-search-api-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-search-api-sg",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.data",
      "mode": "managed",
      "type": "aws_instance",
      "name": "milvus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04191e041105a7671",
            "arn": "arn:aws:ec2:ca-central-1:472730591037:instance/i-0b693e2e1b488dd8d",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ca-central-1:472730591037:key/ea0a08d7-4445-4b39-9cad-8147a45894b8",
                "tags": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Name": "arxplorer-jjb08-milvus-data",
                  "Project": "ArXplorer"
                },
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Name": "arxplorer-jjb08-milvus-data",
                  "Project": "ArXplorer"
                },
                "throughput": 125,
                "volume_id": "vol-035a2a291529ea072",
                "volume_size": 500,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "arxplorer-jjb08-milvus-profile",
            "id": "i-0b693e2e1b488dd8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "arxplorer-jjb08-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05093a086960ec628",
            "private_dns": "ip-10-0-4-123.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ca-central-1:472730591037:key/ea0a08d7-4445-4b39-9cad-8147a45894b8",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "ArXplorer"
                },
                "throughput": 125,
                "volume_id": "vol-0060f9b082f73f541",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0403453631233c39e",
            "tags": {
              "Name": "arxplorer-jjb08-milvus"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-milvus",
              "Project": "ArXplorer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dce8da0b8c6e032d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_security_group.alb",
            "module.app.aws_security_group.offline_ingest",
            "module.app.aws_security_group.search_api",
            "module.data.aws_iam_instance_profile.milvus",
            "module.data.aws_iam_role.milvus",
            "module.data.aws_s3_bucket.backups",
            "module.data.aws_security_group.milvus",
            "module.data.data.aws_ami.ubuntu",
            "module.network.aws_subnet.data_private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.data",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "milvus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:security-group/sg-0dce8da0b8c6e032d",
            "description": "Security group for Milvus instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dce8da0b8c6e032d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Milvus HTTP API from app/offline",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b825ae044d1b307",
                  "sg-069eb32b06cb09995"
                ],
                "self": false,
                "to_port": 9091
              },
              {
                "cidr_blocks": [],
                "description": "Milvus gRPC API from app/offline",
                "from_port": 19530,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b825ae044d1b307",
                  "sg-069eb32b06cb09995"
                ],
                "self": false,
                "to_port": 19530
              }
            ],
            "name": "arxplorer-jjb08-milvus-sg",
            "name_prefix": "",
            "owner_id": "472730591037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arxplorer-jjb08-milvus-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-milvus-sg",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_security_group.alb",
            "module.app.aws_security_group.offline_ingest",
            "module.app.aws_security_group.search_api",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db0694a1415bf97d",
            "arn": "arn:aws:ec2:ca-central-1:472730591037:elastic-ip/eipalloc-0db0694a1415bf97d",
            "association_id": "eipassoc-0e8fd0f2695f17f31",
            "domain": "vpc",
            "id": "eipalloc-0db0694a1415bf97d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0249861b20c8fa6c6",
            "private_dns": "ip-10-0-1-150.ca-central-1.compute.internal",
            "private_ip": "10.0.1.150",
            "public_dns": "ec2-3-97-60-223.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.60.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arxplorer-jjb08-nat-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-nat-eip",
              "Project": "ArXplorer"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:internet-gateway/igw-026a0125b849546f2",
            "id": "igw-026a0125b849546f2",
            "owner_id": "472730591037",
            "tags": {
              "Name": "arxplorer-jjb08-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-igw",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db0694a1415bf97d",
            "association_id": "eipassoc-0e8fd0f2695f17f31",
            "connectivity_type": "public",
            "id": "nat-0daa5ed3d5d63562b",
            "network_interface_id": "eni-0249861b20c8fa6c6",
            "private_ip": "10.0.1.150",
            "public_ip": "3.97.60.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c46445e0e734381d",
            "tags": {
              "Name": "arxplorer-jjb08-nat"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-nat",
              "Project": "ArXplorer"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:route-table/rtb-0fa2a4e43a4fad280",
            "id": "rtb-0fa2a4e43a4fad280",
            "owner_id": "472730591037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0daa5ed3d5d63562b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arxplorer-jjb08-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-private-rt",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:route-table/rtb-0a9a07001ac9a5d42",
            "id": "rtb-0a9a07001ac9a5d42",
            "owner_id": "472730591037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026a0125b849546f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arxplorer-jjb08-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-public-rt",
              "Project": "ArXplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099f64e73aafd0ad2",
            "route_table_id": "rtb-0fa2a4e43a4fad280",
            "subnet_id": "subnet-0cba7c8d5a1f5c16f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.app_private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd2e268e49da5af",
            "route_table_id": "rtb-0fa2a4e43a4fad280",
            "subnet_id": "subnet-0403453631233c39e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.data_private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ml_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057213150d82bd291",
            "route_table_id": "rtb-0fa2a4e43a4fad280",
            "subnet_id": "subnet-0e5d9959b78c5cd67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.ml_private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74300a4c664aed5",
            "route_table_id": "rtb-0a9a07001ac9a5d42",
            "subnet_id": "subnet-0c46445e0e734381d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aa22395b4b0c1b5",
            "route_table_id": "rtb-0a9a07001ac9a5d42",
            "subnet_id": "subnet-057eb45c5af14a58b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:subnet/subnet-0cba7c8d5a1f5c16f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cba7c8d5a1f5c16f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472730591037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arxplorer-jjb08-app-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-app-subnet",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:subnet/subnet-0403453631233c39e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403453631233c39e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472730591037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arxplorer-jjb08-data-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-data-subnet",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ml_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:subnet/subnet-0e5d9959b78c5cd67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5d9959b78c5cd67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472730591037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arxplorer-jjb08-ml-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-ml-subnet",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:subnet/subnet-0c46445e0e734381d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c46445e0e734381d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "472730591037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arxplorer-jjb08-public-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-public-subnet",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:subnet/subnet-057eb45c5af14a58b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057eb45c5af14a58b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "472730591037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arxplorer-jjb08-public-subnet-b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-public-subnet-b",
              "Project": "ArXplorer"
            },
            "vpc_id": "vpc-02dfb8f1b7794fd2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:472730591037:vpc/vpc-02dfb8f1b7794fd2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033d594aa42e5ae05",
            "default_route_table_id": "rtb-0a839264fd948d238",
            "default_security_group_id": "sg-0592220e8122969d8",
            "dhcp_options_id": "dopt-067e6189fec6aa5c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02dfb8f1b7794fd2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a839264fd948d238",
            "owner_id": "472730591037",
            "tags": {
              "Name": "arxplorer-jjb08-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "arxplorer-jjb08-vpc",
              "Project": "ArXplorer"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}